--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,3 +1,10 @@
 @use "./variable";
 @use "./reset";
 @use "./global";
+@use "./banner";
+@use "./sectionDesc";
+@use "./sectionImage";
+@use "./sectionFacilities";
+@use "./sectionDiscover";
+@use "./sectionLogo";
+@use "./sectionServices";
