--- a/assets/scss/_sectionLogo.scss
+++ b/assets/scss/_sectionLogo.scss
@@ -1,4 +1,8 @@
 .section-logo {
+  .logo-wrapper {
+    padding: 0 80px;
+  }
+
   .list-item {
     margin-top: 64px;
     display: grid;
@@ -7,5 +11,18 @@
     grid-template-rows: repeat(2, auto);
 
     gap: 80px;
+
+    .item {
+      max-width: 200px;
+      aspect-ratio: 200 / 204;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      img {
+        width: 100%;
+        height: auto;
+      }
+    }
   }
 }
