--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,6 +1,7 @@
 @use "./variable";
 @use "./reset";
 @use "./global";
+@use "./header";
 @use "./banner";
 @use "./sectionDesc";
 @use "./sectionImage";
