--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -39,3 +39,88 @@ main {
     margin: 0 auto;
   }
 }
+
+.dropdown-custom {
+  position: relative;
+  cursor: default;
+
+  &.has-hover {
+    &:hover {
+      .ic {
+        path {
+          fill: var(--color-white);
+        }
+      }
+      .dropdown-custom__text {
+        color: var(--color-white);
+      }
+    }
+  }
+
+  &__btn {
+    display: flex;
+    align-items: center;
+    color: var(--color-white);
+    cursor: pointer;
+    gap: 12px;
+
+    path {
+      transition: all 0.3s ease;
+    }
+
+    &.--active {
+      .ic {
+        // transform: rotate(180deg);
+      }
+    }
+  }
+
+  .ic {
+    transition: all 0.4s ease;
+  }
+
+  .dropdown-custom__text {
+    transition: all 0.3s ease;
+    font-size: 16px;
+    line-height: 26px;
+    font-weight: 400;
+  }
+
+  &__menu {
+    position: absolute;
+    top: 100%;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s ease;
+    z-index: 11;
+    left: 7px;
+    width: 100%;
+    min-width: 115px;
+    background-color: transparent;
+    border-radius: 8px;
+    padding: 8px;
+    // box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.1019607843);
+
+    .dropdown-custom__item {
+      width: 100%;
+      padding: 5px 10px;
+      white-space: nowrap;
+      cursor: pointer;
+      transition: all 0.3s;
+      border-radius: 8px;
+      color: var(--color-white);
+      font-size: 16px;
+      line-height: 22px;
+      font-weight: 400;
+
+      &:hover {
+        // color: var(--color-secondary) !important;
+      }
+    }
+  }
+}
+
+.dropdown--active {
+  opacity: 1;
+  visibility: visible;
+}
