--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -6,11 +6,14 @@ footer {
 
   .footer-wrapper {
     padding: 40px 80px 24px;
+    position: relative;
+    z-index: 2;
   }
 
   .footer {
     &-ovl {
       opacity: 0;
+      visibility: hidden;
       z-index: 1;
     }
 
