--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -124,3 +124,62 @@ main {
   opacity: 1;
   visibility: visible;
 }
+
+.cta-mess {
+  position: fixed;
+  z-index: 10;
+  right: 40px;
+  bottom: 90px;
+  transition: all 0.4s ease;
+
+  &.hide {
+    opacity: 0;
+    visibility: hidden;
+  }
+
+  a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 60px;
+    height: 60px;
+    background-color: var(--color-secondary);
+    border-radius: 50%;
+    transition: all 0.4s ease;
+
+    &:hover {
+      background-color: var(--color-primary);
+    }
+
+    svg {
+      width: 20px;
+      height: 20px;
+    }
+  }
+}
+
+.link-hover {
+  transition: all 0.4s ease-in-out;
+  position: relative;
+  text-decoration: none;
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background-color: var(--color-white);
+    bottom: 0px;
+    left: 0;
+    transform: scaleX(0);
+    transform-origin: bottom right;
+    transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  &:hover {
+    &::before {
+      transform: scaleX(1);
+      transform-origin: bottom left;
+    }
+  }
+}
