--- a/assets/scss/_variable.scss
+++ b/assets/scss/_variable.scss
@@ -1,6 +1,7 @@
 :root {
   --font-heading: "SVN-Super Display", sans-serif;
   --font-body: "SVN-Marby Pro", sans-serif;
+  --font-third: "1FTV Photograph Signature", sans-serif;
   --color-white: #fff;
   --color-black: #000;
   --color-primary: #c1823e;
