--- a/assets/scss/_banner.scss
+++ b/assets/scss/_banner.scss
@@ -1,26 +1,179 @@
 .hero {
-  height: 100vh;
+  height: 100%;
   width: 100%;
+  position: relative;
 
   &__image {
     width: 100%;
-    height: 100vh;
+    height: 100vh !important;
 
     img {
       width: 100%;
-      height: 100%;
+      height: 100vh !important;
       object-fit: cover;
+
+      transition-timing-function: cubic-bezier(0.23, 1, 0.32, 1);
+      transition-delay: 2000ms !important;
+      transition-duration: 10000ms !important;
     }
   }
 
+  .swiper-slide-active img,
+  .swiper-slide-duplicate-active img {
+    transition-delay: 0s !important;
+  }
+
   &__content {
+    width: 65%;
     position: absolute;
+    z-index: 2;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
     color: var(--color-white);
 
-    display: none;
+    p {
+      font-family: var(--font-heading);
+      font-size: 48px;
+      line-height: 56px;
+      font-weight: 300;
+
+      span {
+        font-family: var(--font-third);
+      }
+    }
+  }
+
+  .swiper-pagination {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    left: 75px;
+    bottom: 48px;
+    right: unset;
+    top: unset;
+    transform: none;
+
+    button {
+      width: 26px;
+      height: 26px;
+      margin: 0;
+      position: relative;
+
+      &::after {
+        content: "";
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        background-color: var(--color-white);
+        position: absolute;
+        top: calc(50% - 0.5px);
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+  }
+
+  .swiper-arrows {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    position: absolute;
+    right: 75px;
+    bottom: 48px;
+
+    .swiper-button-next,
+    .swiper-button-prev {
+      width: 32px;
+      height: 32px;
+      border-radius: 50%;
+      border: 1px solid var(--color-white);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: unset;
+      transition: all 0.4s ease;
+
+      &:hover {
+        background-color: var(--color-white);
+
+        path {
+          stroke: var(--color-secondary);
+        }
+      }
+
+      svg {
+        width: 7px;
+        height: 12px;
+
+        path {
+          transition: all 0.4s ease;
+        }
+      }
+
+      &::after {
+        display: none;
+      }
+    }
+  }
+
+  .swiper-pagination-bullet {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: auto;
+    height: auto;
+    background-color: transparent;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: 0.3s;
+    margin: 0;
+    pointer-events: none;
+
+    span {
+      color: #232c6a;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+
+  .progress {
+    transform: rotate(-90deg);
+    width: 28px;
+    height: 28px;
+    background-color: transparent;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .circle-origin {
+    fill: transparent;
+    stroke: var(--color-white);
+    stroke-width: 1;
+    stroke-linecap: round;
+    stroke-dasharray: 125.664px;
+    stroke-dashoffset: 125.664px;
+    opacity: 1;
+  }
+
+  .swiper-pagination-bullet-active .circle-origin {
+    animation: progress 10s;
+    opacity: 1;
+  }
+
+  @keyframes progress {
+    0% {
+      stroke-dashoffset: 125.664px;
+      // stroke-dashoffset: 0;
+    }
+
+    100% {
+      stroke-dashoffset: 0;
+    }
   }
 }
