--- a/assets/scss/_sectionDiscover.scss
+++ b/assets/scss/_sectionDiscover.scss
@@ -32,6 +32,7 @@
 
   .swiper-button-next,
   .swiper-button-prev {
+    top: calc(50% - 23px);
     width: 50px;
     height: 50px;
     border-radius: 50%;
