--- a/assets/scss/_sectionLogo.scss
+++ b/assets/scss/_sectionLogo.scss
@@ -5,10 +5,12 @@
 
   .list-item {
     margin-top: 64px;
-    display: grid;
+    display: flex;
     align-items: center;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, auto);
+    justify-content: center;
+    justify-items: center;
 
     gap: 80px;
 
@@ -18,6 +20,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      justify-items: center;
 
       img {
         width: 100%;
