--- a/assets/scss/_sectionServices.scss
+++ b/assets/scss/_sectionServices.scss
@@ -34,6 +34,7 @@
       display: flex;
       flex-direction: column;
       min-height: 200px;
+      border-bottom: 3px solid var(--color-secondary);
 
       .tag {
         font-family: var(--font-body);
@@ -50,8 +51,7 @@
         line-height: 28px;
         font-weight: 300;
         color: var(--color-secondary);
-        max-width: 80%;
-        margin: 0 auto;
+        margin: 0 auto 24px;
       }
 
       .price {
