--- a/assets/scss/_variable.scss
+++ b/assets/scss/_variable.scss
@@ -1,6 +1,6 @@
 :root {
-  --font-heading: "SVN-Super Display", sans-serif;
-  --font-body: "SVN-Marby Pro", sans-serif;
+  --font-heading: "SVN-Super Display";
+  --font-body: "SVN-Mabry Pro";
   --font-third: "1FTV Photograph Signature", sans-serif;
   --color-white: #fff;
   --color-black: #000;
