--- a/assets/scss/_banner.scss
+++ b/assets/scss/_banner.scss
@@ -3,9 +3,19 @@
   width: 100%;
   position: relative;
 
+  @media (max-width: 767px) {
+    height: 640px !important;
+    max-height: 100vh;
+  }
+
   &__image {
     width: 100%;
     height: 100vh !important;
+
+    @media (max-width: 767px) {
+      height: 640px !important;
+      max-height: 100vh;
+    }
 
     img {
       width: 100%;
@@ -15,6 +25,11 @@
       transition-timing-function: cubic-bezier(0.23, 1, 0.32, 1);
       transition-delay: 2000ms !important;
       transition-duration: 10000ms !important;
+
+      @media (max-width: 767px) {
+        height: 640px !important;
+        max-height: 100vh;
+      }
     }
   }
 
@@ -29,7 +44,7 @@
     z-index: 2;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, 0%);
     text-align: center;
     color: var(--color-white);
 
@@ -38,6 +53,11 @@
       font-size: 48px;
       line-height: 56px;
       font-weight: 300;
+
+      @media (max-width: 767px) {
+        font-size: 28px;
+        line-height: 40px;
+      }
 
       span {
         font-family: var(--font-third);
@@ -54,6 +74,11 @@
     right: unset;
     top: unset;
     transform: none;
+
+    @media (max-width: 767px) {
+      left: 50%;
+      transform: translateX(-50%);
+    }
 
     button {
       width: 26px;
@@ -82,6 +107,10 @@
     position: absolute;
     right: 75px;
     bottom: 48px;
+
+    @media (max-width: 767px) {
+      display: none;
+    }
 
     .swiper-button-next,
     .swiper-button-prev {
