--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -63,7 +63,7 @@ footer {
           }
 
           path {
-            // fill: var(--color-primary);
+            fill: var(--color-primary);
           }
 
           svg {
@@ -77,7 +77,10 @@ footer {
         height: 34px;
         transition: all 0.4s ease;
 
-        circle,
+        circle {
+          display: none;
+        }
+
         path {
           transition: all 0.4s ease;
         }
@@ -146,6 +149,7 @@ footer {
   .footer-alpha {
     font-size: 12px;
     line-height: 20px;
+    font-weight: 300;
     font-family: var(--font-body);
     color: var(--color-white);
     text-transform: uppercase;
