--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -11,10 +11,18 @@ main {
 
 .spacing-80 {
   height: 80px;
+
+  @media (max-width: 676px) {
+    height: 64px;
+  }
 }
 
 .spacing-120 {
   height: 120px;
+
+  @media (max-width: 676px) {
+    height: 64px;
+  }
 }
 
 .section-title {
@@ -37,6 +45,12 @@ main {
     font-family: var(--font-heading);
     max-width: 45%;
     margin: 0 auto;
+
+    @media (max-width: 767px) {
+      max-width: 100%;
+      font-size: 28px;
+      line-height: 40px;
+    }
   }
 }
 
@@ -130,11 +144,13 @@ main {
   z-index: 10;
   right: 40px;
   bottom: 90px;
-  transition: all 0.4s ease;
+  transition: all 0.5s ease;
+  transform: none;
+  opacity: 1;
 
   &.hide {
+    transform: translateX(calc(100% + 40px));
     opacity: 0;
-    visibility: hidden;
   }
 
   a {
