--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -8,6 +8,11 @@
   width: 100%;
   transition: all 0.4s ease;
 
+  @media (max-width: 767px) {
+    height: 112px;
+    width: 100vw;
+  }
+
   &.header--scroll {
     opacity: 0;
     visibility: hidden;
@@ -18,6 +23,10 @@
     justify-content: space-between;
     align-items: center;
     padding: 40px;
+
+    @media (max-width: 767px) {
+      padding: 20px;
+    }
   }
 
   &-logo {
@@ -26,7 +35,11 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -25%);
+
+    @media (max-width: 767px) {
+      width: 124px;
+    }
 
     img {
       width: 100%;
