--- a/assets/scss/_sectionDesc.scss
+++ b/assets/scss/_sectionDesc.scss
@@ -1,6 +1,10 @@
 .section-desc {
   padding: 0 80px;
 
+  @media (max-width: 676px) {
+    padding: 0 16px;
+  }
+
   .title {
     font-size: 64px;
     line-height: 64px;
@@ -9,6 +13,12 @@
     text-align: center;
     font-family: var(--font-heading);
     margin-bottom: 64px;
+
+    @media (max-width: 767px) {
+      font-size: 36px;
+      line-height: 44px;
+      margin-bottom: 32px;
+    }
   }
 
   .desc {
@@ -21,5 +31,10 @@
     font-family: var(--font-heading);
     max-width: 90%;
     margin: 0 auto;
+
+    @media (max-width: 767px) {
+      font-size: 24px;
+      line-height: 28px;
+    }
   }
 }
