--- a/assets/scss/_sectionFacilities.scss
+++ b/assets/scss/_sectionFacilities.scss
@@ -1,13 +1,23 @@
 .section-facilities {
   padding-top: 80px;
   padding-bottom: 104px;
+  @media (max-width: 767px) {
+    padding-top: 0;
+  }
 
   .facilities_wrapper {
     padding: 0 80px;
+    @media (max-width: 767px) {
+      padding: 0 16px;
+    }
   }
 
   .list-item {
     margin-top: 64px;
+    @media (max-width: 767px) {
+      margin-top: 40px;
+      gap: 56px;
+    }
     .item {
       &-wrapper {
         padding: 32px 24px 0;
@@ -16,6 +26,10 @@
         justify-content: space-between;
         height: 100%;
         background-color: var(--color-white);
+
+        @media (max-width: 767px) {
+          padding: 24px 24px 0;
+        }
       }
 
       &-text {
