--- a/assets/scss/_sectionIntro.scss
+++ b/assets/scss/_sectionIntro.scss
@@ -3,6 +3,10 @@
     &-wrapper {
       padding: 0 80px;
 
+      @media (max-width: 767px) {
+        padding: 0 16px;
+      }
+
       &.img-right {
         .intro-image {
           h4 {
@@ -13,10 +17,18 @@
 
         .box {
           padding: 90px 130px 40px 40px;
+
+          @media (max-width: 767px) {
+            padding: 24px;
+          }
         }
 
         .img-wrapper {
           transform: translateX(-45px);
+
+          @media (max-width: 767px) {
+            transform: none;
+          }
         }
       }
     }
@@ -27,11 +39,28 @@
       .img-wrapper {
         width: calc(100% + 45px);
         aspect-ratio: 869 / 501;
+        position: relative;
+        height: 500px;
+
+        @media (max-width: 767px) {
+          width: 100%;
+          aspect-ratio: 434 / 215;
+          height: unset;
+          min-height: 215px;
+        }
 
         img {
           width: 100%;
           height: 100%;
           object-fit: cover;
+
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          top: 0;
+          left: 0;
+          transform: scale(1.2);
+          transform-origin: 50% 50%;
         }
       }
 
@@ -44,13 +73,34 @@
         margin-bottom: 45px;
         font-style: italic;
         max-width: 65%;
+
+        @media (max-width: 767px) {
+          font-size: 24px;
+          line-height: 28px;
+          max-width: 100%;
+          margin-bottom: 40px;
+        }
       }
     }
 
     &-content {
+      @media (max-width: 767px) {
+        padding: 24px;
+        padding-top: 0;
+        width: calc(100%);
+        left: 50%;
+        transform: translate(-50%, -48px);
+        position: relative;
+        z-index: 3;
+      }
+
       .box {
         padding: 90px 40px 40px 130px;
         background-color: var(--color-white);
+
+        @media (max-width: 767px) {
+          padding: 24px;
+        }
 
         .title {
           font-family: var(--font-heading);
@@ -59,6 +109,12 @@
           color: var(--color-secondary);
           font-weight: 300;
           margin-bottom: 40px;
+
+          @media (max-width: 767px) {
+            font-size: 36px;
+            line-height: 44px;
+            margin-bottom: 24px;
+          }
         }
 
         .list-item {
@@ -88,8 +144,14 @@
           line-height: 24px;
           font-weight: 300;
 
+          @media (max-width: 767px) {
+            margin-top: 24px;
+          }
+
           p {
-            margin-bottom: 16px;
+            &:not(:last-child) {
+              margin-bottom: 16px;
+            }
           }
         }
       }
