--- a/assets/scss/_sectionLogo.scss
+++ b/assets/scss/_sectionLogo.scss
@@ -3,8 +3,11 @@
     padding: 0 80px;
   }
 
+  .section-title {
+    margin-bottom: 64px;
+  }
+
   .list-item {
-    margin-top: 64px;
     display: flex;
     align-items: center;
     grid-template-columns: repeat(3, 1fr);
@@ -12,11 +15,15 @@
     justify-content: center;
     justify-items: center;
 
+    &:not(:last-child) {
+      margin-bottom: 80px;
+    }
+
     gap: 80px;
 
     .item {
       max-width: 200px;
-      aspect-ratio: 200 / 204;
+      aspect-ratio: 200 / 104;
       display: flex;
       align-items: center;
       justify-content: center;
