--- a/assets/scss/_sectionLogo.scss
+++ b/assets/scss/_sectionLogo.scss
@@ -1,10 +1,18 @@
 .section-logo {
   .logo-wrapper {
     padding: 0 80px;
+
+    @media (max-width: 767px) {
+      padding: 0 16px;
+    }
   }
 
   .section-title {
     margin-bottom: 64px;
+
+    @media (max-width: 767px) {
+      margin-bottom: 24px;
+    }
   }
 
   .list-item {
@@ -20,6 +28,9 @@
     }
 
     gap: 80px;
+    @media (max-width: 767px) {
+      gap: 48px;
+    }
 
     .item {
       max-width: 200px;
