--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -8,6 +8,10 @@ footer {
     padding: 40px 80px 24px;
     position: relative;
     z-index: 2;
+
+    @media (max-width: 767px) {
+      padding: 32px 16px 24px;
+    }
   }
 
   .footer {
@@ -38,6 +42,14 @@ footer {
 
     &-info {
       margin-top: 34px;
+
+      @media (max-width: 767px) {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        align-items: center;
+        justify-content: center;
+      }
 
       p,
       a {
@@ -92,6 +104,14 @@ footer {
       align-items: center;
       justify-content: center;
       gap: 40px;
+
+      @media (max-width: 767px) {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        align-items: center;
+        justify-content: center;
+      }
     }
 
     &-download {
@@ -100,6 +120,10 @@ footer {
       flex-direction: column;
       align-items: center;
       gap: 24px;
+
+      @media (max-width: 767px) {
+        margin-top: 64px;
+      }
 
       .btn-download {
         padding: 8px 24px;
@@ -125,6 +149,10 @@ footer {
         flex-direction: column;
         justify-content: space-between;
         align-items: flex-end;
+
+        @media (max-width: 767px) {
+          align-items: center;
+        }
       }
     }
 
@@ -136,12 +164,25 @@ footer {
       width: 55%;
       height: 100%;
 
+      @media (max-width: 767px) {
+        width: 100%;
+        height: 80%;
+        top: unset;
+        bottom: 0;
+      }
+
       img {
         width: 100%;
         height: 100%;
         object-fit: cover;
         object-position: top;
       }
+    }
+  }
+
+  .copyright {
+    @media (max-width: 767px) {
+      margin-bottom: 16px;
     }
   }
 
