--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -148,6 +148,11 @@ main {
   transform: none;
   opacity: 1;
 
+  @media (max-width: 767px) {
+    right: 16px;
+    bottom: 80px;
+  }
+
   &.hide {
     transform: translateX(calc(100% + 40px));
     opacity: 0;
