--- a/assets/scss/_banner.scss
+++ b/assets/scss/_banner.scss
@@ -48,6 +48,10 @@
     text-align: center;
     color: var(--color-white);
 
+    @media (max-width: 767px) {
+      width: 75%;
+    }
+
     p {
       font-family: var(--font-heading);
       font-size: 48px;
@@ -78,6 +82,7 @@
     @media (max-width: 767px) {
       left: 50%;
       transform: translateX(-50%);
+      bottom: 16px;
     }
 
     button {
@@ -114,8 +119,8 @@
 
     .swiper-button-next,
     .swiper-button-prev {
-      width: 32px;
-      height: 32px;
+      width: 50px;
+      height: 50px;
       border-radius: 50%;
       border: 1px solid var(--color-white);
       display: flex;
