--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -14,6 +14,10 @@ main {
 
   @media (max-width: 676px) {
     height: 64px;
+
+    &.spacing-mb-24 {
+      height: 24px;
+    }
   }
 }
 
@@ -162,8 +166,8 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     background-color: var(--color-secondary);
     border-radius: 50%;
     transition: all 0.4s ease;
