--- a/assets/scss/_sectionIntro.scss
+++ b/assets/scss/_sectionIntro.scss
@@ -85,8 +85,7 @@
 
     &-content {
       @media (max-width: 767px) {
-        padding: 24px;
-        padding-top: 0;
+        padding: 0 24px;
         width: calc(100%);
         left: 50%;
         transform: translate(-50%, -48px);
