--- a/assets/scss/_sectionLogo.scss
+++ b/assets/scss/_sectionLogo.scss
@@ -11,7 +11,7 @@
     margin-bottom: 64px;
 
     @media (max-width: 767px) {
-      margin-bottom: 24px;
+      margin-bottom: 40px;
     }
   }
 
@@ -25,6 +25,10 @@
 
     &:not(:last-child) {
       margin-bottom: 80px;
+
+      @media (max-width: 767px) {
+        margin-bottom: 24px;
+      }
     }
 
     gap: 80px;
@@ -39,6 +43,10 @@
       align-items: center;
       justify-content: center;
       justify-items: center;
+
+      @media (max-width: 767px) {
+        max-width: 90px;
+      }
 
       img {
         width: 100%;
