--- a/assets/scss/_sectionDiscover.scss
+++ b/assets/scss/_sectionDiscover.scss
@@ -1,5 +1,5 @@
 .section-discover {
-  background-color: var(--color-white);
+  // background-color: #f4f1ec;
 
   .discover-wrapper {
     padding: 80px 84px;
@@ -24,6 +24,17 @@
         font-weight: 300;
         text-align: center;
         font-family: var(--font-body);
+      }
+
+      &-image {
+        width: 100%;
+        aspect-ratio: 613 / 410;
+
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
       }
     }
   }
