--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -170,8 +170,8 @@ footer {
       height: 100%;
 
       @media (max-width: 991px) {
-        width: 100%;
-        height: 80%;
+        width: 80%;
+        height: 65%;
         top: unset;
         bottom: 0;
       }
@@ -181,6 +181,11 @@ footer {
         height: 100%;
         object-fit: cover;
         object-position: top;
+
+        @media (max-width: 991px) {
+          object-position: bottom;
+          object-fit: contain;
+        }
       }
     }
   }
