--- a/assets/scss/_sectionFacilities.scss
+++ b/assets/scss/_sectionFacilities.scss
@@ -54,6 +54,10 @@
         aspect-ratio: 254 / 370;
         transform: translateY(24px);
 
+        @media (max-width: 991px) {
+          aspect-ratio: 295 / 347;
+        }
+
         img {
           width: 100%;
           height: 100%;
