--- a/assets/scss/_banner.scss
+++ b/assets/scss/_banner.scss
@@ -52,7 +52,7 @@
       width: 75%;
     }
 
-    p {
+    h2 {
       font-family: var(--font-heading);
       font-size: 48px;
       line-height: 56px;
@@ -63,8 +63,9 @@
         line-height: 40px;
       }
 
-      span {
+      em {
         font-family: var(--font-third);
+        font-style: normal;
       }
     }
   }
