--- a/assets/scss/_banner.scss
+++ b/assets/scss/_banner.scss
@@ -58,6 +58,10 @@
       line-height: 56px;
       font-weight: 300;
 
+      &:not(:last-child) {
+        margin-bottom: 24px;
+      }
+
       @media (max-width: 991px) {
         font-size: 28px;
         line-height: 40px;
