--- a/assets/scss/_sectionFacilities.scss
+++ b/assets/scss/_sectionFacilities.scss
@@ -8,8 +8,13 @@
 
   .facilities_wrapper {
     padding: 0 80px;
+
     @media (max-width: 991px) {
-      padding: 0 16px;
+      padding: 40px;
+    }
+
+    @media (max-width: 767px) {
+      padding: 24px;
     }
   }
 
