--- a/assets/scss/_sectionServices.scss
+++ b/assets/scss/_sectionServices.scss
@@ -3,6 +3,10 @@
     padding: 0 80px;
 
     @media (max-width: 991px) {
+      padding: 0 40px 34px;
+    }
+
+    @media (max-width: 767px) {
       padding: 0 16px 34px;
     }
   }
