--- a/assets/scss/_banner.scss
+++ b/assets/scss/_banner.scss
@@ -39,7 +39,7 @@
   }
 
   &__content {
-    width: 65%;
+    width: 80%;
     position: absolute;
     z-index: 2;
     top: 50%;
@@ -49,7 +49,7 @@
     color: var(--color-white);
 
     @media (max-width: 991px) {
-      width: 75%;
+      width: 85%;
     }
 
     h2 {
@@ -57,6 +57,7 @@
       font-size: 48px;
       line-height: 56px;
       font-weight: 300;
+      font-style: italic;
 
       &:not(:last-child) {
         margin-bottom: 24px;
@@ -65,11 +66,26 @@
       @media (max-width: 991px) {
         font-size: 28px;
         line-height: 40px;
+
+        &:not(:last-child) {
+          margin-bottom: 20px;
+        }
       }
 
       em {
         font-family: var(--font-third);
         font-style: normal;
+        font-size: 72px;
+        line-height: 72px;
+
+        @media (max-width: 991px) {
+          font-size: 48px;
+          line-height: 48px;
+
+          .char {
+            overflow: visible;
+          }
+        }
       }
     }
   }
