--- a/assets/scss/_sectionDiscover.scss
+++ b/assets/scss/_sectionDiscover.scss
@@ -33,10 +33,12 @@
       &-image {
         width: 100%;
         aspect-ratio: 613 / 410;
+        overflow: hidden;
 
         img {
           width: 100%;
           height: 100%;
+          scale: 1.35 !important;
           object-fit: cover;
         }
       }
