--- a/assets/scss/_reset.scss
+++ b/assets/scss/_reset.scss
@@ -54,7 +54,7 @@ p {
 }
 body {
   width: 100%;
-  min-height: 100vh;
+  min-height: 100dvh;
   text-rendering: optimizeLegibility !important;
   -webkit-font-smoothing: auto !important;
   -moz-osx-font-smoothing: grayscale !important;
