--- a/assets/scss/_sectionImage.scss
+++ b/assets/scss/_sectionImage.scss
@@ -2,7 +2,7 @@
   .image-wrapper {
     width: 100%;
     aspect-ratio: 1440 / 826;
-    max-height: 100vh;
+    max-height: 100dvh;
 
     img {
       width: 100%;
