--- a/assets/scss/_banner.scss
+++ b/assets/scss/_banner.scss
@@ -1,25 +1,25 @@
 .hero {
-  height: 100%;
+  height: 100dvh;
   width: 100%;
   position: relative;
 
   @media (max-width: 991px) {
     height: 540px !important;
-    max-height: 100vh;
+    max-height: 100dvh;
   }
 
   &__image {
     width: 100%;
-    height: 100vh !important;
+    height: 100dvh !important;
 
     @media (max-width: 991px) {
       height: 540px !important;
-      max-height: 100vh;
+      max-height: 100dvh;
     }
 
     img {
       width: 100%;
-      height: 100vh !important;
+      height: 100dvh !important;
       object-fit: cover;
 
       transition-timing-function: cubic-bezier(0.23, 1, 0.32, 1);
@@ -28,7 +28,7 @@
 
       @media (max-width: 991px) {
         height: 540px !important;
-        max-height: 100vh;
+        max-height: 100dvh;
       }
     }
   }
