--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -7,10 +7,11 @@
   height: 167px;
   width: 100%;
   transition: all 0.4s ease;
+  overflow: hidden;
 
   @media (max-width: 991px) {
     height: 112px;
-    width: 100vw;
+    // width: 100vw;
   }
 
   &.header--scroll {
