--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -171,9 +171,9 @@ main {
   z-index: 10;
   right: 32px;
   bottom: 170px;
-  transition: all 0.5s ease;
-  transform: none;
-  opacity: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 
   @media (max-width: 991px) {
     right: 40px;
@@ -185,8 +185,10 @@ main {
   }
 
   &.hide {
-    transform: translateX(calc(100% + 40px));
-    opacity: 0;
+    a {
+      transform: translateX(100%);
+      opacity: 0;
+    }
   }
 
   a {
@@ -197,7 +199,18 @@ main {
     height: 50px;
     background-color: var(--color-secondary);
     border-radius: 50%;
-    transition: all 0.4s ease;
+    transition: transform 0.6s ease, opacity 0.4s ease;
+    transform: none;
+    opacity: 1;
+
+    &.messenger {
+      background-color: var(--color-primary);
+      transition: transform 0.8s ease, opacity 0.4s ease;
+
+      &:hover {
+        background-color: var(--color-secondary);
+      }
+    }
 
     &:hover {
       background-color: var(--color-primary);
