--- a/assets/scss/_variable.scss
+++ b/assets/scss/_variable.scss
@@ -26,32 +26,35 @@
 .font-body {
   font-family: var(--font-body);
 }
-.h0-font {
+.h1-font {
   font-size: 64px;
-  line-height: 72px;
+  line-height: 64px;
+}
+.h2-font {
+  font-size: 48px;
+  line-height: 54px;
+}
+.h3-font {
+  font-size: 36px;
+  line-height: 44px;
 }
 .h4-font {
-  font-size: 26px;
+  font-size: 28px;
   line-height: 40px;
-  font-weight: 400;
 }
 .h5-font {
   font-size: 24px;
-  line-height: 28px;
-  font-weight: 300;
+  line-height: 32px;
 }
-.b2-font {
-  font-size: 13px;
-  line-height: 20px;
-  font-weight: bold;
+.h6-font {
+  font-size: 20px;
+  line-height: 26px;
 }
 .b1-font {
   font-size: 16px;
-  line-height: 28px;
-  font-weight: 400;
+  line-height: 24px;
 }
-.b2-font-md {
-  font-size: 13px;
+.b3-font {
+  font-size: 12px;
   line-height: 20px;
-  font-weight: 500;
 }
