--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -204,13 +204,15 @@ main {
     height: 50px;
     background-color: var(--color-secondary);
     border-radius: 50%;
-    transition: transform 0.6s ease, opacity 0.4s ease;
+    transition: transform 0.6s ease, opacity 0.4s ease,
+      background-color 0.4s ease;
     transform: none;
     opacity: 1;
 
     &.messenger {
       background-color: var(--color-primary);
-      transition: transform 0.8s ease, opacity 0.4s ease;
+      transition: transform 0.8s ease, opacity 0.4s ease,
+        background-color 0.4s ease;
 
       &:hover {
         background-color: var(--color-secondary);
