--- a/assets/scss/_variable.scss
+++ b/assets/scss/_variable.scss
@@ -54,6 +54,8 @@
 .h6-font {
   font-size: 20px;
   line-height: 26px;
+  font-weight: 400;
+  font-family: var(--font-heading);
 }
 .b1-font {
   font-size: 16px;
