--- a/assets/scss/_sectionDiscover.scss
+++ b/assets/scss/_sectionDiscover.scss
@@ -29,6 +29,7 @@
         font-weight: 300;
         text-align: center;
         font-family: var(--font-body);
+        transition: all 0.4s ease;
       }
 
       &-image {
@@ -41,6 +42,14 @@
           height: 100%;
           scale: 1.35 !important;
           object-fit: cover;
+        }
+      }
+
+      &-wrapper {
+        &:hover {
+          .item-text {
+            color: var(--color-primary);
+          }
         }
       }
     }
