--- a/assets/scss/_sectionServices.scss
+++ b/assets/scss/_sectionServices.scss
@@ -9,10 +9,17 @@
     @media (max-width: 767px) {
       padding: 0 16px 34px;
     }
+
+    .btn-book {
+      display: block;
+      width: max-content;
+      margin: 48px auto 0;
+    }
   }
 
   .list-item {
     margin-top: 64px;
+    padding-bottom: 100px;
 
     @media (max-width: 991px) {
       margin-top: 40px;
