--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -12,4 +12,6 @@
 @use "./sectionIntro";
 @use "./sectionMap";
 @use "./detailDesc";
+@use "./twoCol.scss";
+@use "./sliderParallax";
 @use "./footer";
