--- a/assets/scss/_detailDesc.scss
+++ b/assets/scss/_detailDesc.scss
@@ -2,3 +2,36 @@
   height: 100vh;
   background-color: red;
 }
+.detail-description {
+  padding: 120px 80px;
+  background-image: url("../../images/use/bg-desc-room.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  &-box {
+    text-align: center;
+    h2 {
+      margin-bottom: 24px;
+    }
+    .list-item {
+      display: flex;
+      justify-content: center;
+      gap: 40px;
+      margin-bottom: 24px;
+      li {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+      }
+    }
+    .description-lg,
+    .detail-sm {
+      margin-bottom: 40px;
+    }
+    .list-button {
+      display: flex;
+      justify-content: center;
+      gap: 16px;
+    }
+  }
+}
