--- a/assets/scss/_sectionIntro.scss
+++ b/assets/scss/_sectionIntro.scss
@@ -167,6 +167,11 @@
             }
           }
         }
+
+        .button-wrapper {
+          margin-top: 40px;
+          max-width: 275px;
+        }
       }
     }
   }
