--- a/assets/scss/_banner.scss
+++ b/assets/scss/_banner.scss
@@ -1,7 +1,23 @@
 .hero {
-  height: 100dvh;
   width: 100%;
   position: relative;
+  height: 640px;
+
+  &.has-slider {
+    height: 100dvh;
+  }
+
+  .hero-image {
+    width: 100%;
+    height: 100%;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+    }
+  }
 
   @media (max-width: 991px) {
     height: 540px !important;
