--- a/assets/scss/_sectionIntro.scss
+++ b/assets/scss/_sectionIntro.scss
@@ -103,6 +103,10 @@
         z-index: 3;
       }
 
+      .working-hours {
+        margin-top: 28px;
+      }
+
       .box {
         padding: 80px 40px 80px 97px;
         background-color: var(--color-white);
