--- a/assets/scss/_detailDesc.scss
+++ b/assets/scss/_detailDesc.scss
@@ -8,6 +8,9 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  &.restaurant {
+    background-image: url("../../images/use/bg-desc-restaurant.png");
+  }
   &-box {
     text-align: center;
     h2 {
@@ -25,7 +28,8 @@
       }
     }
     .description-lg,
-    .detail-sm {
+    .detail-sm,
+    .detail-time {
       margin-bottom: 40px;
     }
     .list-button {
