--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -33,6 +33,7 @@ footer {
       aspect-ratio: 199 / 104;
       margin: 0 auto;
       position: absolute;
+      top: 40px;
       left: 50%;
       transform: translateX(-50%);
 
@@ -69,7 +70,7 @@ footer {
       align-items: center;
       justify-content: flex-end;
       gap: 16px;
-      margin-top: 34px;
+      margin-top: 16px;
 
       @media (max-width: 991px) {
         justify-content: center;
