--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -15,4 +15,6 @@
 @use "./detailDesc";
 @use "./twoCol.scss";
 @use "./sliderParallax";
+@use "./sectionContact";
+@use "./sectionFAQ";
 @use "./footer";
