--- a/assets/scss/_gallery.scss
+++ b/assets/scss/_gallery.scss
@@ -28,6 +28,7 @@
     @media (max-width: 991px) {
       padding: 0 24px;
       grid-template-columns: 1fr;
+      margin-top: 40px;
     }
   }
 
@@ -40,6 +41,54 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+    }
+  }
+  .fitler-mobile {
+    position: sticky;
+    top: 72px;
+    z-index: 2;
+    .filter-head {
+      position: relative;
+      background-color: var(--color-white);
+      padding: 12px 0;
+      &.active {
+        .ic-arrow {
+          transform: translateY(-50%) rotate(180deg);
+        }
+      }
+      .ic-arrow {
+        position: absolute;
+        right: 15px;
+        top: 50%;
+        transform: translateY(-50%);
+        transition: transform 0.4s ease;
+      }
+      .filter-value-select {
+        text-align: center;
+      }
+    }
+    .filter-body {
+      height: 0;
+      transition: all 0.4s ease;
+
+      background-color: var(--color-white);
+      &.active {
+        height: auto;
+
+        .nav {
+          clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+        }
+      }
+      .nav {
+        flex-direction: column;
+        align-items: center;
+        background-color: var(--color-white);
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+        transition: clip-path 0.4s ease;
+        will-change: clip-path;
+        margin-bottom: 0;
+        padding: 24px 0;
+      }
     }
   }
 }
