--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -308,3 +308,34 @@ main {
     color: var(--color-white);
   }
 }
+
+.loading {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+
+  .image {
+    width: 100%;
+    height: 100%;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+
+  .logo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    img {
+      width: 200px;
+      height: 104px;
+    }
+  }
+}
