--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -310,13 +310,13 @@ main {
 }
 
 .loading {
-  position: fixed;
+  position: absolute;
   width: 100vw;
   height: 100vh;
   top: 0;
   left: 0;
   z-index: 1000;
-
+  will-change: clip-path;
   .image {
     width: 100%;
     height: 100%;
