--- a/assets/scss/_sectionTestimonials.scss
+++ b/assets/scss/_sectionTestimonials.scss
@@ -1,6 +1,21 @@
 .section-testimonials {
   .testimonials-wapper {
     padding: 0 80px;
+
+    @media (max-width: 767px) {
+      padding: 0 24px;
+    }
+  }
+
+  .swiper-pagination {
+    position: unset;
+    margin: 40px auto 0;
+    width: 150px;
+    height: 1px;
+
+    .swiper-pagination-progressbar-fill {
+      background-color: var(--color-secondary);
+    }
   }
 
   .testimonials-slider {
@@ -14,6 +29,10 @@
         display: flex;
         flex-direction: column;
         min-height: 428px;
+
+        @media (max-width: 767px) {
+          min-height: 380px;
+        }
       }
 
       &-avt {
