--- a/assets/scss/_detailDesc.scss
+++ b/assets/scss/_detailDesc.scss
@@ -8,6 +8,9 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  @media (max-width: 991px) {
+    padding: 64px 24px 40px;
+  }
   &.restaurant {
     background-image: url("../../images/use/bg-desc-restaurant.png");
   }
