--- a/assets/scss/_sliderParallax.scss
+++ b/assets/scss/_sliderParallax.scss
@@ -2,6 +2,12 @@
   width: 100%;
   height: calc(100vh - 72px);
   position: relative;
+  @media (max-width: 991px) {
+    height: auto;
+    aspect-ratio: 327 / 227;
+    width: calc(100% - 48px);
+    margin: 0 auto 40px;
+  }
   .swiper-parallax-img {
     width: 100%;
     height: 100%;
@@ -26,6 +32,9 @@
     transition: all 0.3s ease;
     background-color: transparent;
     transform: translateY(-50%);
+    @media (max-width: 991px) {
+      display: none;
+    }
     &:hover {
       background-color: var(--color-white);
       svg {
@@ -53,5 +62,19 @@
   }
   .swiper-button-next {
     right: 80px;
+  }
+  .slider-parallax-pagination {
+    @media (max-width: 991px) {
+      position: relative;
+      margin-top: 40px;
+      width: 160px;
+      height: 1px;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: #c4bab2;
+      span {
+        background-color: var(--color-secondary);
+      }
+    }
   }
 }
