--- a/assets/scss/_variable.scss
+++ b/assets/scss/_variable.scss
@@ -34,14 +34,26 @@
   font-size: 48px;
   line-height: 54px;
   font-weight: 300;
+  @media (max-width: 991px) {
+    font-size: 36px;
+    line-height: 44px;
+  }
 }
 .h3-font {
   font-size: 36px;
   line-height: 44px;
+  @media (max-width: 991px) {
+    font-size: 28px;
+    line-height: 40px;
+  }
 }
 .h4-font {
   font-size: 28px;
   line-height: 40px;
+  @media (max-width: 991px) {
+    font-size: 24px;
+    line-height: 32px;
+  }
 }
 .h5-font {
   font-size: 24px;
