--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -58,7 +58,8 @@ footer {
         gap: 8px;
         align-items: center;
         justify-content: center;
-        margin-bottom: 40px;
+        margin-bottom: 24px;
+        margin-top: 24px;
       }
 
       p,
