--- a/assets/scss/_sectionMap.scss
+++ b/assets/scss/_sectionMap.scss
@@ -1,7 +1,9 @@
 .section-map {
   &__wrapper {
     padding: 0 80px;
-
+    @media (max-width: 991px) {
+      padding: 0 40px;
+    }
     @media (max-width: 767px) {
       padding: 0;
     }
