--- a/assets/scss/_sectionFacilities.scss
+++ b/assets/scss/_sectionFacilities.scss
@@ -3,7 +3,7 @@
   padding-bottom: 72px;
   @media (max-width: 991px) {
     padding-top: 0;
-    padding-bottom: 0;
+    padding-bottom: 64px;
   }
 
   .facilities_wrapper {
