--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -24,6 +24,9 @@
       transform: translateY(-167px);
       pointer-events: auto;
     }
+    @media (max-width: 991px) {
+      height: 72px;
+    }
   }
 
   &-wrapper {
@@ -246,7 +249,9 @@
         .sub-menu {
           width: 100%;
           height: 100%;
-          padding-top: 120px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
           ul {
             display: flex;
             align-items: center;
