--- a/assets/scss/_twoCol.scss
+++ b/assets/scss/_twoCol.scss
@@ -9,6 +9,9 @@
     gap: 64px 0;
   }
   .col-content {
+    p {
+      color: var(--color-secondary);
+    }
     h3 {
       margin-bottom: 40px;
     }
