--- a/assets/scss/_sectionDiscover.scss
+++ b/assets/scss/_sectionDiscover.scss
@@ -3,7 +3,7 @@
   overflow: hidden;
 
   .discover-wrapper {
-    padding: 120px 80px;
+    padding: 120px 80px 140px;
 
     @media (max-width: 991px) {
       padding: 88px 40px 0;
