--- a/assets/scss/_banner.scss
+++ b/assets/scss/_banner.scss
@@ -8,13 +8,8 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    background: linear-gradient(
-      360deg,
-      rgba(0, 0, 0, 0) 0%,
-      rgba(0, 0, 0, 0.331067) 31.2%,
-      #000000 94.25%
-    );
+    height: 230px;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
   }
   &.has-slider {
     height: 100dvh;
