--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -120,7 +120,7 @@ footer {
       flex-wrap: wrap;
       align-items: center;
       justify-content: center;
-      gap: 0 40px;
+      gap: 16px 40px;
       margin-top: 16px;
 
       a {
