--- a/assets/scss/_sectionIntro.scss
+++ b/assets/scss/_sectionIntro.scss
@@ -100,7 +100,7 @@
         font-weight: 300;
         margin-bottom: 45px;
         font-style: italic;
-        max-width: 65%;
+        max-width: 520px;
 
         @media (max-width: 991px) {
           font-size: 24px;
