--- a/assets/scss/_gallery.scss
+++ b/assets/scss/_gallery.scss
@@ -195,8 +195,8 @@
   }
 }
 .lg-image {
-  max-width: 845px;
-  aspect-ratio: 16 / 9;
+  max-width: 840px;
+  max-height: 540px;
 }
 .lg-counter {
   display: none;
